--- a/paga-web-astro/src/pages/galeria.astro
+++ b/paga-web-astro/src/pages/galeria.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "../layouts/BaseLayout.astro";
+import Layout from '../layouts/BaseLayout.astro';
 
 // Datos de ejemplo para la galería. Puedes agregar más aquí.
 const galeriaItems = [
