Update: pagina de sobre nosotros, publicaciones e imagenes de inicio

--- a/paga-web-astro/src/pages/index.astro
+++ b/paga-web-astro/src/pages/index.astro
@@ -15,7 +15,7 @@ import Layout from "../layouts/BaseLayout.astro";
       <div class="swiper-wrapper">
         <div class="swiper-slide relative">
           <img
-            src="/slider/image1.jpg"
+            src="/slider/image1i.jpg"
             class="w-full h-full object-cover"
             alt="Investigación Sostenible"
           />
@@ -34,7 +34,7 @@ import Layout from "../layouts/BaseLayout.astro";
         </div>
         <div class="swiper-slide relative">
           <img
-            src="/slider/image2.jpg"
+            src="/slider/image2i.jpg"
             class="w-full h-full object-cover"
             alt="Tecnología Verde"
           />
@@ -53,7 +53,7 @@ import Layout from "../layouts/BaseLayout.astro";
         </div>
         <div class="swiper-slide relative">
           <img
-            src="/slider/image3.jpg"
+            src="/slider/image3i.jpeg"
             class="w-full h-full object-cover"
             alt="Impacto Social"
           />
