--- a/paga-web-astro/src/pages/podcast.astro
+++ b/paga-web-astro/src/pages/podcast.astro
@@ -10,8 +10,8 @@ const temporadas = [
     episodios: [
       { titulo: "T1-Capítulo 1: Introducción a la Teledetección", videoId: "g7UXSm4CaSk" },
       { titulo: "T1-Capítulo 2: Ciudad que respira: ...contaminación del aire en la CDMX", videoId: "AawJWn-D__Q" }, // Reemplazar VIDEO_ID
-      { titulo: "T1-Capítulo 3: El Futuro del Sector Espacial 🚀 Ciencia, Sociedad e Innovación", videoId: "AJjM8nqEUs0" }, // Reemplazar VIDEO_ID
-      { titulo: "T1-Capítulo 4: El futuro de la humanidad y la exploración del espacio 🚀", videoId: "fdr14bw6k50" }
+      { titulo: "T1-Capítulo 3: El Futuro del Sector Espacial Ciencia, Sociedad e Innovación", videoId: "AJjM8nqEUs0" }, // Reemplazar VIDEO_ID
+      { titulo: "T1-Capítulo 4: El futuro de la humanidad y la exploración del espacio", videoId: "fdr14bw6k50" }
     ],
   },
   {
