Plantilla inicial del Blog

--- a/paga-web-astro/src/pages/contacto.astro
+++ b/paga-web-astro/src/pages/contacto.astro
@@ -11,40 +11,6 @@ import {
   Users,
   Building,
 } from "lucide-astro";
-
-const equipoContactos = [
-  {
-    nombre: "Dra. María Concepción Martínez Rodríguez",
-    titulo: "Profesora Investigadora",
-    email: "mcmartinezr@ipn.mx",
-    linkedin:
-      "https://mx.linkedin.com/in/mar%C3%ADa-concepci%C3%B3n-mart%C3%ADnez-rodr%C3%ADguez-804062214",
-    researchgate:
-      "https://www.researchgate.net/profile/Maria-Martinez-Rodriguez-2",
-    scholar: "https://scholar.google.com/citations?user=NByc9WUAAAAJ&hl=es",
-    orcid: "https://orcid.org/0000-0003-3094-5411",
-  },
-  {
-    nombre: "Héctor Ramírez",
-    titulo: "Maestro en Ciencias",
-    email: "hector.ramirez@ciiemad.ipn.mx",
-    linkedin: "www.linkedin.com/in/ramírez-héctor-g-2611b8292",
-    researchgate:
-      "https://www.researchgate.net/profile/Hector-Ramirez-Escamilla?ev=hdr_xprf",
-    scholar: "https://scholar.google.com/citations?user=fyJvKSQAAAAJ&hl=es ",
-    orcid: "https://orcid.org/0000-0001-9440-4644 ",
-  },
-  {
-    nombre: "Ana Laura",
-    titulo: "Maestra en Ciencias",
-    email: "ana.laura@ciiemad.ipn.mx",
-    linkedin: "https://www.linkedin.com/in/ana-laura-cervantes-n-462942157/",
-    researchgate:
-      "https://www.researchgate.net/profile/Ana-Cervantes-Najera?ev=hdr_xprf",
-    scholar: "https://scholar.google.es/citations?user=CBs19IoAAAAJ&hl=es",
-    orcid: "https://orcid.org/0000-0003-3841-2011",
-  },
-];
 ---
 
 <Layout>
@@ -137,7 +103,7 @@ const equipoContactos = [
           </h3>
           <form
             class="space-y-6"
-            action="https://formsubmit.co/tu-correo@gmail.com"
+            action="https://formsubmit.co/sustentalapp@gmail.com"
             method="POST"
           >
             <div>
