--- a/paga-web-astro/src/pages/index.astro
+++ b/paga-web-astro/src/pages/index.astro
@@ -16,7 +16,8 @@ import Layout from "../layouts/BaseLayout.astro";
         <div class="swiper-slide relative">
           <img
             src="/slider/image1i.jpg"
-            class="w-full h-full object-cover"
+            class="w-full h-full object-scale-down"
+            style="background-image: linear-gradient(to bottom, #0B4536, #60A917); object-position: top;"
             alt="Investigación Sostenible"
           />
           <div
